--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,37 @@
 async-generator==1.10
 attrs==23.1.0
 beautifulsoup4==4.12.2
+cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 exceptiongroup==1.1.1
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+gspread==5.8.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.4
+numpy==1.24.3
+oauth2client==4.1.3
+oauthlib==3.2.2
 outcome==1.2.0
+pandas==2.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyparsing==3.0.9
 PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3
 requests==2.29.0
+requests-oauthlib==1.3.1
+rsa==4.9
 selenium==4.9.0
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
 trio==0.22.0
 trio-websocket==0.10.2
+tzdata==2023.3
 urllib3==1.26.15
 wsproto==1.2.0
